responsive design for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>Уроки игры на гитаре</title>
+    <link rel="stylesheet" href="./css/style.css">
+
     <meta name="description" content="Лучший репетитор игры на гитаре в Ташкенте">
     <script src="https://kit.fontawesome.com/307974e440.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png">
